--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   },
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
+    "aws-sdk": "^2.751.0",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -50,6 +52,8 @@
     "http-errors": "~1.6.3",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.2.1",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
