--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch:dev": "nodemon",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint --fix .",
-    "format": "npx prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
+    "format": "npx prettier --write \"**/*.+(js|json|yml|yaml|css|md)\"",
     "knex": "npx knex --knexfile config/knexfile.js",
     "tests": "npx jest --forceExit",
     "coverage": "CI=true npx jest --coverage --detectOpenHandles --forceExit"
@@ -41,6 +41,7 @@
     "@okta/jwt-verifier": "^1.0.0",
     "aws-sdk": "^2.751.0",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -50,6 +51,7 @@
     "faker": "^4.1.0",
     "helmet": "^3.23.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
