--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "faker": "^4.1.0",
     "helmet": "^3.23.1",
     "http-errors": "~1.6.3",
@@ -57,8 +57,10 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "pg": "^8.2.1",
+    "stripe": "^8.106.0",
     "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
