--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: paambaati/codeclimate-action@v2.6.0
         env:
           # An environment variable, the value is a GitHub repo secret
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          CC_TEST_REPORTER_ID: ${{ secrets.CodeClimateReporterId }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         with:
           # Run our `coverage` script in our `package.json`
