--- a/package.json
+++ b/package.json
@@ -18,21 +18,16 @@
     "coverage": "CI=true npx jest --coverage --detectOpenHandles --forceExit"
   },
   "jest": {
-		"testEnvironment": "node",
-		"coverageReporters": [
-			"json-summary",
-			"text",
-			"lcov"
-		],
-		"coveragePathIgnorePatterns": [
-			"/node_modules/",
-			"/__tests__/",
-			"/coverage/",
-			"/public/",
-			"/database/",
-			"/.github/"
-		]
-	},
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/__tests__/**",
+      "!**/coverage/**",
+      "!**/apidoc/**"
+    ]
+  },
   "nodemonConfig": {
     "exec": "npm run start",
     "watch": [
