trying out a different coverage script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "npx prettier --write \"**/*.+(js|json|yml|yaml|css|md)\"",
     "knex": "npx knex --knexfile config/knexfile.js",
     "tests": "npx jest --forceExit",
-    "coverage": "CI=true npx jest --coverage --detectOpenHandles --forceExit"
+    "coverage": "npx jest --coverage --detectOpenHandles --forceExit"
   },
   "jest": {
     "testEnvironment": "node",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
-    "aws-sdk": "^2.751.0",
+    "aws-sdk": "^2.768.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -52,31 +52,31 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "faker": "^4.1.0",
-    "helmet": "^3.23.1",
+    "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
+    "knex": "^0.21.6",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "pg": "^8.2.1",
-    "swagger-jsdoc": "^4.0.0",
+    "pg": "^8.4.0",
+    "swagger-jsdoc": "^4.2.0",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jest": "^23.17.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.2.4",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "supertest": "^4.0.2"
   },
   "description": "> ## website here",
