--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
           # An environment variable, the value is a GitHub repo secret
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          OKTA_ORG_URL: ${{ secrets.OKTA_ORG_URL }}
+          OKTA_CLIENT_ID: ${{ secrets.OKTA_CLIENT_ID }}
         with:
           # Run our `coverage` script in our `package.json`
           coverageCommand: npm run coverage
