--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "pg": "^8.2.1",
+    "stripe": "^8.109.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
   },
