--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-cron": "^2.0.3",
     "pg": "^8.2.1",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
